--- a/src/Components/SlideSwiper/slider.css
+++ b/src/Components/SlideSwiper/slider.css
@@ -9,13 +9,13 @@
   
     .swiper {
       padding-bottom: 25px;
-      padding-top: 10px;
+      padding-top: 0px;
     }
   }
   
   @media only screen and (min-width: 800px) {
     .swiper {
-      padding: 10px;
+      padding: 0 10px;
       padding-bottom: 25px;
     }
   }
